--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 @layer base {
-  * 
+  /* * {
+    @apply border-border;
+  } */
   body {
     @apply bg-gradient-to-br from-blue-50 to-indigo-100 font-sans antialiased;
   }
@@ -51,3 +52,4 @@
   }
 
 }
+
